pin setuptools==69.5.1 to avoid build error

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -24,7 +24,9 @@ requirements:
     - {{ compiler('c') }}
   host:
     - python >=3.8
-    - setuptools
+    # Use pinned version (< 70.0.0) of setuptools to avoid error:
+    # - source: https://github.com/aws-neuron/aws-neuron-sdk/issues/893
+    - setuptools==69.5.1
     - wheel
     - pytorch
     - pip
