--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,5 @@
 {% set name = "tensordict" %}
-{% set version = "0.1.2" %}
+{% set version = "0.4.0" %}
 
 package:
   name: {{ name|lower }}
@@ -11,25 +11,30 @@ source:
   # Once the source is added there, change the recipe to build with
   # the source from PyPI.
   url: https://github.com/pytorch-labs/tensordict/archive/v{{ version }}.tar.gz
-  sha256: 9c784b90233ee4d493ff15b99c62873511ce70098e096851f0fb29037f52387b
+  sha256: c6a565cc88d4f8bc1e1f5e6aba23c2c099f08799730c2716fe6b8706d015b7a5
 
 build:
   number: 0
-  noarch: python
   script: {{ PYTHON }} -m pip install . -vv
+  skip: true  # [win] 
 
 requirements:
+  build:
+    - {{ compiler('cxx') }}
+    - {{ compiler('c') }}
+    - {{ stdlib("c") }}
   host:
-    - python >=3.8
+    - python
     - setuptools
     - wheel
     - pytorch
     - pip
   run:
-    - python >=3.8
+    - python
     - pytorch
     - numpy
     - cloudpickle
+    - packaging
 
 test:
   imports:
@@ -86,3 +91,4 @@ about:
 extra:
   recipe-maintainers:
     - sugatoray
+    - jan-janssen
